--- a/vercel.json
+++ b/vercel.json
@@ -26,6 +26,16 @@
             "src": "/(.*)",
             "dest": "prova_digital/wsgi.py"
         }
-    ]
+    ],
+    "functions": {
+        "api/test.js": {
+          "memory": 3008,
+          "maxDuration": 30
+        },
+        "api/*.js": {
+          "memory": 3008,
+          "maxDuration": 30
+        }
+    }
 
 }
