--- a/vercel.json
+++ b/vercel.json
@@ -28,11 +28,7 @@
         }
     ],
     "functions": {
-        "api/test.js": {
-          "memory": 3008,
-          "maxDuration": 30
-        },
-        "api/*.js": {
+        "static/js/script.js": {
           "memory": 3008,
           "maxDuration": 30
         }
